  number of binary variable for performing clique table analysis
- added parameter "expbackoff" to all separators which increases the frequency exponentially over depth

interface:
- new command line parameter "-r" to pass a nonnegative integer as random seed.
- new interface methods to create and use bandit algorithms implemented as SCIP core plugins
- new public methods SCIPvariableGraphBreadthFirst() and SCIPvariableGraph{Create,Free}() to
  perform breadth-first search on the variable constraint graph used by the GINS and ALNS heuristics
- removed clique component index from SCIP_Var struct and the public interface method SCIPvarGetCliqueComponentIdx
- new interface methods SCIPcreateRandom, SCIPfreeRandom that replace SCIPrandomCreate and SCIPrandomFree
  in the public SCIP API
- new interface method SCIPsetRandomSeed to (re)set a random number generator seed
- new interface methods SCIPcreateDigraph, SCIPcopyDigraph that replace SCIPdigraphCreate and SCIPdigraphCopy
  in the public SCIP API
- added method SCIPsetProbingLPState() to install given LP state and/or norms at the current probing node
- generalized SCIPcreate{Cons,ConsBasic}Orbitope() method to three orbitope types (full, partitioning, packing)
- added functions SCIPbranchcandGetLPMaxPrio() and SCIPbranchcandGetExternMaxPrio() to query the maximal branching priority of given
  branching candidates; also added SCIPbranchcandGetNPrioLPCands() to access the number of LP candidates with this priority.
- added methods SCIPupdateSolIntegralityViolation(), SCIPupdateSolBoundViolation(), SCIPupdateSolLPRowViolation(),
  SCIPupdateSolConsViolation() and SCIPupdateSolLPConsViolation() for updating numerical solution violations, as well as
  SCIPactivateSolViolationUpdates() and SCIPdeactivateSolViolationUpdates() for activating/deactivating violation updates globally
- added method SCIPcliqueGetIndex() which returns the unique identifier for the given clique